--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -1,14 +1,16 @@
 :root {
-    --primary: #228ab1;
-    --secundary: #69c6d3;
-    --terciary: #645a63;
-    --cuaternary: #f5f5f5;
+    --primary: #BEFF16;
+    --secundary: #ffffff;
+    --terciary: #757675;
+    --cuaternary: #0c0d0c;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
 }
 
 html {
@@ -24,540 +26,58 @@ html {
 
 header {
     width: 100%;
-    background-color: var(--cuaternary);
-}
-
-header .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    height: 75px;
-}
-
-.logo a {
-    font-size: 3rem;
-    font-weight: bold;
-    line-height: 4rem;
-    text-decoration: none;
-    color: var(--primary);
-}
-
-.header-container--menu ul {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-}
-
-.header-container--menu li {
-    padding: 20px 10px;
-}
-
-.header-container--menu li a {
-    font-size: 1.8rem;
-    line-height: 2rem;
-    font-weight: 500;
-    text-decoration: none;
-    color: var(--primary);
-}
-
-/*SECTION SLIDER*/
-
-.main-slider--container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    padding-top: 50px;
-    padding-bottom: 25px;
-    text-align: center;
-    background-color: #69c6d3;
-}
-
-.main-title--container h2 {
-    margin-bottom: 20px;
-    font-size: 4rem;
-    line-height: 4rem;
-    font-weight: 500;
-    color: var(--cuaternary);
-}
-
-.main-title--container .brand {
-    font-weight: bold;
-    color: var(--primary);
-}
-
-.main-title--container p {
-    margin-bottom: 30px;
-    font-size: 1.6rem;
-    line-height: 2rem;
-    color: var(--cuaternary);
-}
-
-.main-title--container button {
-    padding: 10px 20px;
-    font-size: 1.4rem;
-    font-weight: 600;
-    margin-bottom: 20px;
-    border: 1px solid var(--primary);
-    border-radius: 50px;
-    background-color: var(--primary);
-    color: var(--cuaternary);
-    transition: all 0.5s;
-    cursor: pointer;
-}
-
-.main-title--container button:hover {
-    padding: 10px 20px;
-    font-size: 1.6rem;
-    font-weight: 600;
-    margin-bottom: 20px;
-    border: 1px solid var(--primary);
-    border-radius: 50px;
-    background-color: var(--cuaternary);
-    color: var(--primary);
-    transition: all 0.5s;
-}
-
-.main-title--container .icon-wsp {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-left: 5px;
-    background-image: url('../images/icon-wsp.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    vertical-align: middle;
-}
-
-.main-img-container img {
-    width: 100%;
-}
-
-/*SECTION SLIDER*/
-
-.main-forYou--container {
-    text-align: center;
-    background-color: var(--cuaternary);
-    padding-top: 50px;
-    padding-bottom: 25px;
-}
-
-.main-forYou-title-container h2 {
-    font-size: 3rem;
-    line-height: 3rem;
-    font-weight: 600;
-    margin-bottom: 30px;
-    color: var(--primary);
-}
-
-.main-forYou-title-container p {
-    font-size: 1.6rem;
-    font-weight: 2rem;
-    margin-bottom: 30px;
-    color: var(--terciary);
-}
-
-.main-forYou-title-container picture img {
-    width: auto;
-    height: 150px;
-    margin: 0 10px;
-}
-
-.icon-arrow-left {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    left: 0;
-    top: calc(50% - 15px);
-    background-image: url('../images/icon-arrow-left.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.icon-arrow-right {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    right: 0;
-    top: calc(50% - 15px);
-    background-image: url('../images/icon-arrow-right.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.main-picture--container {
-    position: relative;
-}
-
-.main-carrusel-container {
-    display: flex;
-    overflow-x: scroll;
-    overscroll-behavior-x: contain;
-    scroll-snap-type: x proximity;
-}
-
-.main-carrusel-container .card {
-    scroll-snap-align: center;
-}
-
-/*SECTION SERVICES*/
-
-.main-services--container {
-    padding-top: 50px;
-    padding-bottom: 25px;
-    text-align: center;
-    background-color: var(--secundary);
-}
-
-.main-services--container h2 {
-    font-size: 3rem;
-    line-height: 3rem;
-    font-weight: 600;
-    margin-bottom: 50px;
-    color: var(--cuaternary);
-}
-
-.services-container--card {
-    margin: 20px auto;
-    padding: 20px 0;
-}
-
-.services-container--card:hover {
-    background-color: var(--primary);
-}
-
-.services-container--card .services-card--icon {
-    display: inline-block;
-    width: 50px;
     height: 50px;
-    margin-bottom: 20px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.services-container--card .icon-blog {
-    background-image: url('../images/icon-blog.png');
-}
-
-.services-card--title {
-    font-size: 2.5rem;
-    line-height: 2rem;
-    font-weight: 400;
-    margin-bottom: 15px;
-    color: var(--cuaternary);
-}
-
-.services-card--text {
-    font-size: 1.6rem;
-    font-weight: 2rem;
-    color: var(--cuaternary);
-}
-
-.services-container--card .icon-empresa {
-    background-image: url('../images/icon-empresa.svg');
-}
-
-.services-container--card .icon-landingpage {
-    background-image: url('../images/icon-landingpage.svg');
-}
-
-.services-container--card .icon-portfolio {
-    background-image: url('../images/icon-porfolio.svg');
-}
-
-.services-container--card .icon-storeonline {
-    width: 60px;
-    height: 60px;
-    margin-bottom: 10px;
-    background-image: url('../images/icon-storeonline.svg');
-}
-
-.services-container--card .icon-admin {
-    background-image: url('../images/icon-admin.svg');
-}
-
-/*SECTION PLANS*/
-
-.main-plans--container {
-    margin: 0 auto;
-    padding: 50px 0;
-    text-align: center;
     background-color: var(--cuaternary);
 }
 
-.flex {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.main-plans--container h2 {
-    font-size: 3rem;
-    line-height: 3rem;
-    font-weight: 600;
-    margin-bottom: 50px;
-    color: var(--primary);
-}
-
-.plans-container-slider {
-    width: 250px;
-    max-width: 300px;
-    margin: 0 auto;
-    border: 1px solid var(--primary);
-    border-radius: 15px;
-    overflow: hidden;
-    margin-top: 30px;
-}
-
-.plans-info--container .plans--title {
-    padding-top: 15px;
-    font-size: 2.5rem;
-    line-height: 4rem;
-    font-weight: 500;
-    color: var(--cuaternary);
-    background-color: var(--primary);
-}
-
-.plans-info--container .plans--text {
-    padding-bottom: 10px;
-    font-size: 1.2rem;
-    line-height: 3rem;
-    font-weight: 400;
-    color: var(--cuaternary);
-    background-color: var(--primary);
-}
-
-.plans--price {
+.header-desktop {
+    display: none;
     position: relative;
-    font-size: 5rem;
-    line-height: 6rem;
-    margin: 30px auto;
-    color: var(--primary);
 }
 
-.symbol-dollar {
-    position: absolute;
-    left: calc(50% - 65px);
-    top: -10px;
-    font-size: 1.6rem; 
-}
-
-.plans-info--container ul {
-    list-style: none;
-}
-
-.plans--features {
-    font-size: 1.6rem;
-    line-height: 2.5rem;
-    font-weight: 400;
-    text-align: left;
-    padding: 0 10px;
-    color: var(--terciary);
-}
-
-.icon-checkout {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    vertical-align: middle;
-    margin-right: 10px;
-    background-image: url('../images/icon-checkout.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.plans-info--container button {
-    font-size: 1.4rem;
-    line-height: 2rem;
-    margin-top: 30px;
-    margin-bottom: 40px;
-    padding: 10px 20px;
-    border: 1px solid var(--primary);
-    border-radius: 20px;
-    transition: all 0.5s;
-    cursor: pointer;
-    color: var(--cuaternary);
-    background-color: var(--primary);
-}
-
-.plans-info--container button:hover {
-    font-size: 1.6rem;
-    border: 1px solid var(--primary);
-    transition: all 0.5s;
-    background-color: var(--cuaternary);
-    color: var(--primary);
-}
-
-.features-premium p {
-    margin-top: 30px;
-    margin-bottom: 20px;
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 2rem;
-    color: var(--terciary);
-}
-
-.features-premium ul {
-    list-style: none;
-    text-align: left;
-}
-
-.features-premium li {
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 2rem;
-    color: var(--terciary);
-}
-
-/*SECTION ABOUT*/
-
-.main-about--container {
-    padding-top: 50px;
-    padding-bottom: 25px;
-    text-align: center;
-    background-color: var(--secundary);
-}
-
-.main-about--container .container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.about-article--title h2 {
-    font-size: 3rem;
-    line-height: 3rem;
-    font-weight: 600;
-    margin-bottom: 30px;
-    color: var(--cuaternary);
-}
-
-.about-article--title p {
-    font-size: 1.6rem;
-    font-weight: 2rem;
-    margin-bottom: 30px;
-    color: var(--cuaternary);
-}
-
-.about-article--img img {
-    width: 100%;
-}
-
-/*SECTION PROJECTS*/
-
-.main-projects--container {
-    padding-top: 50px;
-    padding-bottom: 25px;
-    text-align: center;
-    background-color: var(--cuaternary);
-}
-
-.projects-title h2 {
-    font-size: 3rem;
-    line-height: 3rem;
-    font-weight: 600;
-    margin-bottom: 30px;
-    color: var(--primary);
-}
-
-.projects-title p {
-    font-size: 1.6rem;
-    font-weight: 2rem;
-    margin-bottom: 30px;
-    color: var(--terciary);
-}
-
-.projects-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.header-mobile__container {
     margin: 0 auto;
-    overflow: hidden;
+    padding: 0 10px;
 }
 
-.projects-gallery--img img {
-    width: 100%;
-    max-width: 350px;
-    margin: 20px 20px;
-    transition: opacity 0.5s;
+.header-mobile__nav {
+    display: flex;
+    /* justify-content: space-between; */
+    /* align-items: center; */
+
 }
 
-.projects-gallery--img img:hover {
-    opacity: 0.5;
-    transition: opacity 0.5s;    
-}
-
-/*SECTION CONTACT*/
-
-.main-contact-container {
-    padding-top: 50px;
-    padding-bottom: 25px;
-    text-align: center;
-    background-color: var(--secundary);
-}
-
-.contact-title h2 {
-    font-size: 3rem;
-    line-height: 3rem;
+.header-mobile__nav--logo {
+    font-size: 2rem;
     font-weight: 600;
-    margin-bottom: 30px;
-    color: var(--cuaternary);
+    color: var(--secundary);
 }
 
-.contact-title p {
-    font-size: 1.6rem;
-    font-weight: 2rem;
-    margin-bottom: 30px;
-    color: var(--cuaternary);
-}
-
-.contact-form .contact-box, #contact-plans {
+.header-mobile__nav--ul {
+    display: none;
+    /* display: flex; */
+    flex-direction: column;
+    justify-content: space-around;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 40px;
-    margin-bottom: 10px;
-    padding: 10px;
-    font-size: 1.6rem;
-    line-height: 2rem;
-    border: 0;
-    color: var(--terciary);
+    height: 90vh;
+    text-align: center;
     background-color: var(--cuaternary);
 }
 
-#description {
-    width: 100%;
-    margin-bottom: 30px;
-    padding: 10px;
-    font-size: 1.6rem;
-    line-height: 2rem;
-    border: 0;
-    font-family: 'DM Sans', sans-serif;
-    color: var(--terciary);
-    background-color: var(--cuaternary);
+.ul__li--a {
+    display: block;
+    padding: 20%;
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--secundary);
+    
 }
 
-.contact-form .contact-button {
-    width: 100%;
-    font-size: 1.4rem;
-    line-height: 2rem;
-    margin-bottom: 40px;
-    padding: 10px 20px;
-    border: 1px solid var(--primary);
-    border-radius: 20px;
-    transition: all 0.5s;
-    cursor: pointer;
+.ul__li--a:hover {
     color: var(--cuaternary);
     background-color: var(--primary);
-}
-
-.contact-form .contact-button:hover {
-    font-size: 1.6rem;
-    border: 1px solid var(--primary);
-    transition: all 0.5s;
-    background-color: var(--cuaternary);
-    color: var(--primary);
+    
 }
