--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -4,6 +4,7 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 html {
@@ -11,3 +12,91 @@ html {
     font-family: 'Poppins', sans-serif;
     background-color: #000;
 }
+
+:root {
+    --color-primary: #fff;
+    --color-secundary: #BEFF16;
+    --color-text: #757675;
+    --color-background: #191919;
+    --color-hover: #BEFF1638;
+    --color-black: #000;
+}
+
+.header-mobile {
+    height: 80px;
+    position: relative;
+}
+
+.header-mobile__container {
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+.header-mobile__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+}
+
+.header-mobile__nav--logo {
+    font-size: 3.5rem;
+    font-weight: 800;
+    color: var(--color-primary);
+}
+
+.header-mobile__nav--toggle {
+    width: 40px;
+    cursor: pointer;
+}
+
+.header-mobile__nav-menu {
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    width: 100%;
+    height: 90vh;
+}
+
+.header-mobile__nav-menu-visible {
+    position: absolute;
+    top: 80px;
+    left: 0%;
+}
+
+.header-mobile__nav-menu--link {
+    height: 20%;
+}
+
+.header-mobile__nav-menu--link a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: var(--color-primary);
+}
+
+.header-mobile__nav-menu--link a:hover {
+    color: var(--color-black);
+    background-color: #BEFF16;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
