--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -22,9 +22,12 @@ html {
     --color-black: #000;
 }
 
+.header-desktop {
+    display: none;
+}
+
 .header-mobile {
     height: 80px;
-    position: relative;
 }
 
 .header-mobile__container {
@@ -53,15 +56,15 @@ html {
 .header-mobile__nav-menu {
     position: absolute;
     top: 80px;
-    left: -100%;
     width: 100%;
     height: 90vh;
+    transition: all 1s;
 }
 
 .header-mobile__nav-menu-visible {
     position: absolute;
-    top: 80px;
-    left: 0%;
+    top: 1000px;
+    transition: all 1s;
 }
 
 .header-mobile__nav-menu--link {
@@ -86,6 +89,19 @@ html {
 
 
 
+
+
+
+/* KEYFRAMES */
+@keyframes transitionDropdown {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
 
 
 
