--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -109,8 +109,14 @@ html {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 700px;
     text-align: center;
+}
+
+.main__introduce--title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main__introduce--title-h4 {
@@ -128,8 +134,8 @@ html {
 }
 
 .main_introduce--title-h3 {
-    margin-top: 20px;
-    margin-bottom: 50px;
+    margin-top: 10px;
+    margin-bottom: 100px;
     font-size: 3rem;
     font-weight: 600;
     color: var(--color-secundary);
@@ -139,6 +145,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 200px;
     padding: 10px 30px;
     border: 1px solid var(--color-secundary);
     cursor: pointer;
@@ -161,6 +168,12 @@ html {
     font-weight: 500;
     color: var(--color-primary);
 }
+
+.main__introduce--slider {
+    display: none;
+}
+
+/* SECTION ABOUT */
 
 
 
