--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -4,7 +4,7 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 html {
@@ -69,6 +69,7 @@ html {
 .header-mobile__nav-menu {
     position: absolute;
     top: 80px;
+    left: 0%;
     width: 100%;
     height: 90vh;
     transition: all 1s;
@@ -77,7 +78,7 @@ html {
 
 .header-mobile__nav-menu-visible {
     position: absolute;
-    top: 1000px;
+    left: -100%;
     transition: all 1s;
     z-index: 10;
 }
@@ -109,7 +110,7 @@ html {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 700px;
+    height: 100vh;
     text-align: center;
 }
 
@@ -175,11 +176,54 @@ html {
 
 /* SECTION ABOUT */
 
+.main__about {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    height: 100vh;
+}
+.main__about--title {
+    margin-bottom: 50px;
+    font-size: 3rem;
+    font-weight: 600;
+    color: var(--color-primary);
+}
 
+.main__about--text {
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--color-text);
+}
 
+.main__about-icons {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-top: -300px;
+    width: 100%;
+    height: auto;
+}
 
+.main__about-icons--title {
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: var(--color-primary);
+}
 
+.main__about-icons--img {
+    width: 60px;
+}
 
+.main__about-icons-figure {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px 30px;
+}
 
 
 
