--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -202,7 +202,6 @@ html {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: -300px;
     width: 100%;
     height: auto;
 }
@@ -225,22 +224,124 @@ html {
     padding: 0 20px 30px;
 }
 
+/* SECTION PORTFOLIO */
 
+.main__portfolio {
+    margin: 0 auto;
+    height: auto;
+}
 
+.main__portfolio--title {
+    margin-bottom: 50px;
+    font-size: 3rem;
+    font-weight: 600;
+    color: var(--color-primary);
+}
 
+.main__portfolio--text {
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--color-text);
+}
 
+.main__portfolio-categories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin: 30px 0;
+}
 
+.main__portfolio-categories--link {
+    padding: 10px 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    transition: all .5s;
+    color: var(--color-primary);
+}
 
+.main__portfolio-categories--link:hover {
+    transition: all .5s;
+    color: var(--color-secundary);
+}
 
+.main__portfolio-galery {
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    gap: 10px;
+    flex-wrap: wrap;
+    align-items: center;
+}
 
+.main__portfolio-galery--item {
+    height: 300px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+    transition: all .5s;
+}
 
+.main__portfolio-galery--item-1 {
+    grid-column: 1 / 10;
+    grid-row: 1 span 1;
+    background-image: url("../images/coaching.jpg");
+}
 
+.main__portfolio-galery--item-2 {
+    grid-column: 1 / 10;
+    grid-row: 2 span 1;
+    background-image: url("../images/empresa.jpg");
+}
 
+.main__portfolio-galery--item-3 {
+    grid-column: 1 / 10;
+    grid-row: 3 span 1;
+    background-image: url("../images/perfumeria.jpg");
+}
 
+.main__portfolio-galery--item-4 {
+    grid-column: 1 / 10;
+    grid-row: 4 span 1;
+    background-image: url("../images/portafolio-fotografia.jpg");
+}
 
+.main__portfolio-galery--item-5 {
+    grid-column: 1 / 10;
+    grid-row: 5 span 1;
+    background-image: url("../images/portafolio-web-designer.jpg");
+}
 
+.main__portfolio-galery--item-6 {
+    grid-column: 1 / 10;
+    grid-row: 6 span 1;
+    background-image: url("../images/ropa-infantil.jpg");
+}
 
+.main__portfolio-galery--item-7 {
+    grid-column: 1 / 10;
+    grid-row: 6 span 1;
+    background-image: url("../images/turismo.jpg");
+}
 
+.main__portfolio-galery--title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    font-size: 2rem;
+    font-weight: 500;
+    transition: all .5s;
+    color: transparent;
+}
+
+.main__portfolio-galery--title:hover {
+    transition: all .5s;
+    color: var(--color-secundary);
+    background-color: rgba(120, 120, 120, 0.5);
+}
 
 
 
