--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -343,6 +343,77 @@ html {
     background-color: rgba(120, 120, 120, 0.5);
 }
 
+/* SECTION SERVICES */
+
+.main__services {
+    width: 100%;
+    overflow: hidden;
+}
+
+.main__services--title {
+    margin-bottom: 50px;
+    font-size: 3rem;
+    font-weight: 600;
+    color: var(--color-primary);
+}
+
+.main__services--text {
+    margin-bottom: 30px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--color-text);
+}
+
+.main__services-card--item {
+    width: 100%;
+    height: 300px;
+    margin: 10px 0;
+    padding: 20px;
+    text-align: center;
+    transition: all .5s;
+    background-color: var(--color-background);
+}
+
+.main__services-card--item:hover {
+    transition: all .5s;
+    border: 1px solid var(--color-secundary);
+}
+
+.main__services-card--item-icon {
+    width: 50px;
+    margin-bottom: 20px;
+}
+
+.main__services-card--item-title {
+    margin-bottom: 30px;
+    font-size: 2rem;
+    font-weight: 500;
+    color: var(--color-primary);
+}
+
+.main__services-card--item-text {
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--color-text);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
