--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -397,12 +397,55 @@ html {
     color: var(--color-text);
 }
 
+/* SECTION CONTACT */
 
+.main__contact {
+    width: 100%;
+    height: 100vh;
+}
 
+.main__contact--title {
+    margin-bottom: 50px;
+    font-size: 3rem;
+    font-weight: 600;
+    color: var(--color-primary);
+}
 
+.main__contact--text {
+    margin-bottom: 30px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--color-text);
+}
 
+.main__contact-form--item {
+    width: 100%;
+    margin: 5px 0;
+    padding: 10px 5px;
+    border: 1px solid var(--color-text);
+    outline: none;
+    background-color: transparent;
+}
 
+.main__contact-form--btn {
+    width: 100%;
+    margin: 5px 0;
+    padding: 10px 5px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    border: 1px solid var(--color-secundary);
+    color: var(--color-primary);
+    background-color: transparent;
+}
 
+.main__contact-form--btn:hover {
+    background-color: var(--color-hover);
+}
+
+.main__contact-img {
+    padding: 70px 0;
+    text-align: center;
+}
 
 
 
