--- a/css/styles-desktop.css
+++ b/css/styles-desktop.css
@@ -4,13 +4,12 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 html {
     font-size: 62.5%;
     font-family: 'Poppins', sans-serif;
-    background-color: #000;
+    background-color: var(--color-black);
 }
 
 :root {
@@ -20,6 +19,14 @@ html {
     --color-background: #191919;
     --color-hover: #BEFF1638;
     --color-black: #000;
+}
+
+/* GENERAL */
+
+.main__container {
+    padding: 0 30px;
+    margin: 0 auto;
+    width: 1025px;
 }
 
 /* HEADER */
@@ -37,4 +44,135 @@ html {
     width: 1025px;
     height: 80px;
     margin: 0 auto;
+    padding: 0 30px;
+}
+
+.header-desktop__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+}
+
+.header-desktop__nav--logo {
+    font-size: 3rem;
+    font-weight: 800;
+    color: var(--color-primary);
+}
+
+.header-desktop__nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-desktop__nav-menu--link {
+    display: flex;
+    justify-content: space-around;
+    padding-left: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.header-desktop__nav-menu--link a {
+    font-size: 1.5rem;
+    font-weight: 600;
+    transition: all .5s;
+    color: var(--color-primary);
+}
+
+.header-desktop__nav-menu--link a:hover {
+    transition: all .5s;
+    color: var(--color-secundary);
+}
+
+.header-desktop__nav-menu--link a:active {
+    color: var(--color-secundary);
+}
+
+/* SECTION INTRODUCE */
+
+.main__introduce {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    height: 100vh;
+}
+
+.main__introduce-slider {
+    display: block;
+    padding-bottom: 150px;
+}
+
+.main__introduce-slider--img1 {
+    width: 80%;
+}
+
+.main__introduce--title {
+    margin: 0 auto;
+    padding-bottom: 150px;
+}
+
+.main__introduce--title-h4 {
+    margin: 0;
+}
+
+.main__introduce--title-h2 {
+    font-size: 4rem;
+}
+
+.main__introduce--button-wsp-text {
+    font-size: 1.4rem;
+}
+
+/* SECTION ABOUT */
+
+.main__about-icons {
+    margin-top: -150px;
+}
+
+.main__about-icons-figure {
+    padding: 20px 100px;
+}
+
+.main__about-icons--title {
+    font-size: 1.5rem;
+}
+
+/* SECTION PORTFOLIO */
+
+
+
+/* SECTION SERVICES */
+
+.main__services-card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.main__services-card--item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 300px;
+    padding: 30px;
+}
+
+/* SECTION CONTACT */
+
+.main__contact {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main__contact-container {
+    width: 70%;
+}
+
+.main__contact-img {
+    padding-top: 150px;
 }
